# exo-os

./: .gitignore  ARCHITECTURE.md  com.exoos.orchestrator.plist  install_auto.sh
exo-app/: index.html  package-lock.json  package.json
exo-app/src/: App.tsx  styles.css
exo-app/src-tauri/: Cargo.toml  tauri.conf.json
exo-app/src-tauri/capabilities/: default.json
exo-app/src-tauri/icons/: icon.icns
exo-app/src-tauri/migrations/: 001_init.sql  002_google_calendar.sql  003_reminders.sql
exo-app/src-tauri/src/: db.rs  lib.rs  main.rs  reminders.rs
exo-app/src-tauri/src/commands/: contacts.rs  conversations.rs  google_calendar.rs  logs.rs  mod.rs  stats.rs  status.rs  sync.rs  timeline.rs
exo-app/src-tauri/src/google/: api.rs  oauth.rs  types.rs
exo-app/src/hooks/: useTrackpadScroll.ts
exo-app/src/lib/: store.ts  tauri.ts
exo-app/src/pages/: Constellation.tsx  Contacts.tsx  Journal.tsx  Onboarding.tsx  (+3 more)
exo-dashboard/: package-lock.json  package.json  vite.config.js
exo-dashboard/server/: index.js  paths.js
exo-dashboard/src/: App.jsx  globals.css  index.html  main.jsx
hyperconfigurator/: package-lock.json  package.json
mcp-client-orchestrator/: clean-notion.js  migrate-headings.js  orchestrator.js  package-lock.json  package.json  run.sh  setup-comet-categories.js  setup_cortex.js
mcp-comet-poc/: ROADMAP.md  package-lock.json  package.json  server.js
mcp-dev-poc/: package-lock.json  package.json  server.js
mcp-imessage-poc/: package-lock.json  package.json  server.js
mcp-whatsapp-poc/: extract.js  package-lock.json  package.json  server.js
(+29 files in other folders)
