[package]
name = "exo-app"
version = "0.1.0"
description = "Exo OS — Your personal life operating system"
authors = ["Mathéo Ballasse"]
edition = "2021"

[lib]
name = "exo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tauri-plugin-notification = "2"
